<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="next_article">下一条</string>
    <string name="added">已添加</string>
    <string name="invite">邀请注册</string>
    <string name="msg_subscribe_data"> 查看企业数据</string>
    <string name="task_endtimetask_endtime">截止时间</string>
    <string name="work_oa_sigin">自动考勤</string>
    <string name="work_oa_order">查看订单询价单</string>
    <string name="user_noOpen_app">The user has not yet opened app</string>
    <string name="startT_cannott_big_sT">Start time can not be greater than the current system time </string>
    <string name="endT_cannott_big_sT">The cutoff time can not be greater than the current system time</string>
    <string name="input_vist_context"> Please enter the content </string>
    <string name="limit_unno_zijie"> Can not enter special characters</string>
    <string name="Original_visit">Original visit</string>
    <string name="ws_client_address_name">Edit customer address name</string>
    <string name="visitting_type">Type of visit</string>
    <string name="connect_businedd">Related Niche</string>
    <string name="select_flights">Choose a punch table</string>
    <string-array name="step_week1">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string-array name="step_week2">
        <item>Sunday </item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string name="step_Sunday">SUN</string>
    <string name="step_Monday">MON</string>
    <string name="step_Tuesday">TUE</string>
    <string name="step_Wednesday">WED</string>
    <string name="step_Thursday">THU</string>
    <string name="step_Friday">FRI</string>
    <string name="step_Saturday">SAT</string>
    <string name="work_off_time">off time</string>
    <string name="work_sign">Clock in</string>
    <string name="off_sign">Clock off </string>
    <string name="daily_record">Daily Record</string>
    <string name="creater">creator</string>
    <string name="enterprise_license">Business licence</string>
    <string name="login_button">登  录</string>
    <string name="login_account">账号    |</string>
    <string name="login_password">密码    |</string>
    <string name="login_losspwd">忘记密码</string>
    <string name="login_getpwd">密码找回</string>
    <string name="login_register">新用户注册</string>
    <string-array name="calendar_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="alarm_time">
        <item>1分钟</item>
        <item>2分钟</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>20分钟</item>
        <item>30分钟</item>
    </string-array>
    <string-array name="sign_distance">
        <item>200米</item>
        <item>300米</item>
        <item>500米</item>
        <item>1000米</item>
        <item>1500米</item>
    </string-array>
    <string-array name="work_distance">
        <item>200米</item>
        <item>300米</item>
        <item>500米</item>
        <item>1000米</item>
        <item>1500米</item>
    </string-array>
    <string name="open_location">定位失败，请确认允许程序使用定位权限</string>
    <string name="end_less_start">截止时间不能小于或等于开始时间</string>
    <string name="delete_item">确定要删除吗</string>
    <string name="select_must">选择(必填)</string>
    <string name="select_nomust">选择(非必填)</string>
    <string name="input_must">输入(必填)</string>
    <string name="too_long_signin">当前位置距离考勤地点太远或没有获取到办公地址，打卡失败</string>
    <string name="add_company_name">请选择或输入公司名称</string>
    <string name="add_company_addr">请选择或输入公司地址</string>
    <string name="updata">更新</string>
    <string name="select_location">选择地址</string>
    <string name="signin_alert">打卡提醒</string>
    <string name="too_long_to_http">网络请求超时，请检查网络或稍后重试</string>
    <string name="other_map">使用其他地图</string>
    <string name="current_time">当前时间</string>
    <string name="click_finds"><u>点击查看</u></string>
    <string name="add_summed">请添加工作总结(必填项)!</string>
    <string name="change_mobile_ok">申请变更成功，待系统审批完即可正常打卡!</string>
    <string name="change_signin_ok">申诉成功!</string>
    <string name="change_mobile">打卡设备变更单</string>
    <string name="supple_signin">申诉申请</string>
    <string name="play_phone">拨打电话</string>
    <string name="send_mail">发送短信</string>
    <string name="add_plan">请添加工作计划!</string>
    <string name="add_learned">请添加心得体会!</string>
    <string name="session_out">会话已断开</string>
    <string name="crm_sale_num">****元  (第**名)</string>
    <string name="not_format_phone">手机格式不正确！</string>
    <string name="not_phone">当前用户没有公开手机号</string>
    <string name="crm_ranking">我的排名</string>
    <string name="crm_sale_msg">本月销售简报</string>
    <string name="crm_branch">我的下属</string>
    <string name="crm_target">我的指标</string>
    <string name="crm_customer_forget">遗忘的客户</string>
    <string name="crm_customer_forget_num">__个</string>
    <string name="crm_business">商机</string>
    <string name="crm_customer">客户</string>
    <string name="crm_customer_visit">客户拜访</string>
    <string name="crm_waller">荣誉墙</string>
    <string name="empty_message">暂无数据</string>
    <string name="loading_message">请等待！</string>
    <string name="error_message">很抱歉! 系统发现未知错误</string>
    <string name="empty_button">再次尝试</string>
    <string name="loading_button">取消</string>
    <string name="error_button">再次尝试</string>
    <string name="app_name">UU互联</string>
    <string name="data_exception">数据异常，请稍后重试</string>
    <string name="net_exception">网络异常，请稍后重试</string>
    <string name="please_wait">请稍等&#8230;</string>
    <string name="load_failed_click_again">加载失败，点击重新加载</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="close">关闭</string>
    <string name="save">保存</string>
    <string name="prompt_title">提示</string>
    <string name="search">搜索</string>
    <string name="temporarily_no_data">暂时没有数据</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="saveing">保存中&#8230;</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="delete">删除</string>
    <string name="add">新增</string>
    <string name="next_step">下一步</string>
    <string name="c_take_picture">拍照</string>
    <string name="c_take_picture_failed">拍照失败</string>
    <string name="c_photo_album">相册</string>
    <string name="c_photo_album_failed">选择失败</string>
    <string name="c_crop_failed">裁减失败</string>
    <string name="locationing">正在定位</string>
    <string name="current_location">当前位置</string>
    <string name="hot_city">热门城市</string>
    <string name="select_city_by_province">按省份选择城市</string>
    <string name="location_failed">定位失败</string>
    <string name="select">选择</string>
    <string name="country">国家</string>
    <string name="province">省份</string>
    <string name="city">城市</string>
    <string name="county">县区</string>
    <string name="to_this_day">至今</string>
    <string name="friendly_time_just_now">刚刚</string>
    <string name="friendly_time_before_seconds">秒前</string>
    <string name="friendly_time_before_minute">分钟前</string>
    <string name="friendly_time_yesterday">昨天</string>
    <string name="friendly_time_before_yesterday">前天</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="please_input_name">请输入昵称</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_confirm_new_password">请确认新密码</string>
    <string name="please_input_keyword">请输入关键字</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_telphone_login">使用手机号登录</string>
    <string name="register_account">注册用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_failed">登陆失败</string>
    <string name="switch_account">切换账号</string>
    <string name="data_update">数据更新</string>
    <string name="data_not_update_exit">用户数据尚未更新完毕，退出将放弃登陆，您是否要退出？</string>
    <string name="register_step_one">1、输入手机号</string>
    <string name="phone_number_format_error">手机号码格式错误</string>
    <string name="telphone_already_rigister">手机号已经被注册</string>
    <string name="get_auth_code_failed">获取验证码失败，请重新发送</string>
    <string name="auth_code_error">验证码错误</string>
    <string name="auth_code_overdue">验证码失效</string>
    <string name="register_step_two">2、填写密码</string>
    <string name="password_empty_error">密码不允许为空，且长度大于6个字符</string>
    <string name="confirm_password_empty_error">确认密码不允许为空，且长度大于6个字符</string>
    <string name="password_confirm_password_not_match">密码和确认密码不一致</string>
    <string name="cancel_register_prompt">是否退出该次注册？</string>
    <string name="register_step_three">3、基本资料</string>
    <string name="register_error">注册出错，请重试</string>
    <string name="register_success">注册成功</string>
    <string name="exit">退出</string>
    <string name="login_again">重新登陆</string>
    <string name="overdue_title">过期通知</string>
    <string name="token_overdue_des">本地访问令牌已过期，是否立即重新登陆？</string>
    <string name="deficiency_data_des">本地数据已过期，是否立即重新登陆？</string>
    <string name="logout_title">下线通知</string>
    <string name="logout_des">您的账号在另外一台设备上登录，是否立即重新登陆？</string>
    <string name="message">消息</string>
    <string name="find">通讯录</string>
    <string name="nearby">工作</string>
    <string name="group_chat">群聊</string>
    <string name="me">我</string>
    <string name="welcome_user_software">欢迎使用UAS系统</string>
    <string name="msg_picture">[图片]</string>
    <string name="msg_voice">[语音]</string>
    <string name="msg_location">[位置]</string>
    <string name="uas_company_name">Shenzhen You soft Technology Co., Ltd</string>
    <string name="common_save_button">保存</string>
    <string name="common_input">请输入(必填)</string>
    <string name="common_input1">请输入(非必填)</string>
    <string name="common_select">请选择(必选)</string>
    <string name="common_select_not_must">请选择(非必选)</string>
    <string name="common_input_or_select_much">请输入或选择(必选)</string>
    <string name="common_cancel">取消</string>
    <string name="common_Contact_information">联系方式</string>
    <string name="common_Contact_person">联系人</string>
    <string name="common_delete">删除</string>
    <string name="current_stage">当前阶段</string>
    <string name="last_followup_time">最后跟进时间</string>
    <string name="grab">抢</string>
    <string name="client_Not_traded">未成交</string>
    <string name="client_Clerk">业务员</string>
    <string name="client_status">审核状态</string>
    <string name="client_Number">编号:</string>
    <string name="thismonth_prediction">本月预测(元)：</string>
    <string name="visit_company">拜访单位</string>
    <string name="visit_address">拜访地址</string>
    <string name="visit_aim">拜访目的</string>
    <string name="add_contacts">添加联系人</string>
    <string name="name">姓名</string>
    <string name="visit_date">拜访日期</string>
    <string name="dialog_phone">手机号码</string>
    <string name="qzone_send_word">发文字</string>
    <string name="qzone_send_picture">发图片</string>
    <string name="qzone_send_video">发视频</string>
    <string name="visit_content">拜访内容</string>
    <string name="c_c">C</string>
    <string name="c_7">7</string>
    <string name="c_8">8</string>
    <string name="c_9">9</string>
    <string name="c_4">4</string>
    <string name="c_5">5</string>
    <string name="c_6">6</string>
    <string name="c_1">1</string>
    <string name="c_2">2</string>
    <string name="c_3">3</string>
    <string name="c_add">＋</string>
    <string name="c_0">0</string>
    <string name="c_point">·</string>
</resources>