<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:background="@color/bg_main"
     >

    <!-- 任务:    要求datapick，监听用户选择的日期 -->
    <!--         android:inputType="text" -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:drawable/edit_text">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:inputType="text"
            android:gravity="center"
            android:textSize="17sp"
            android:text="="
            />
        <TextView
            android:id="@+id/c_result"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="40dp"
            android:inputType="text"
            android:gravity="center_vertical|left"
            android:textSize="17sp"
            />
        <TextView
            android:id="@+id/c_edit"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="40dp"
            android:inputType="text"
            android:gravity="center_vertical|right"
            android:layout_marginRight="5dp"
            android:textSize="17sp"
            android:maxLength="8"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="@style/calculator_item"
            android:text="@string/c_1"
            android:id="@+id/c_1"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_2"
            android:id="@+id/c_2"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_3"
            android:id="@+id/c_3"
            />
        <LinearLayout
            style="@style/calculator_item"
            android:gravity="center"
            android:paddingBottom="6dp"
            >
            <Button
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/calculator_delete"
                android:id="@+id/c_backspace"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="@style/calculator_item"
            android:text="@string/c_4"
            android:id="@+id/c_4"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_5"
            android:id="@+id/c_5"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_6"
            android:id="@+id/c_6"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_add"
            android:id="@+id/c_add"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="@style/calculator_item"
            android:text="@string/c_7"
            android:id="@+id/c_7"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_8"
            android:id="@+id/c_8"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_9"
            android:id="@+id/c_9"
            />
        <Button
            style="@style/calculator_item"
            android:text="取消"
            android:id="@+id/c_cancel"
            android:visibility="visible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            style="@style/calculator_item"
            android:text="@string/c_c"
            android:id="@+id/c_c"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_0"
            android:id="@+id/c_0"
            />
        <Button
            style="@style/calculator_item"
            android:text="@string/c_point"
            android:id="@+id/c_point"
            />
        <LinearLayout
            style="@style/calculator_item"
           >
            <Button
                style="@style/calculator_item"
                android:text="完成"
                android:id="@+id/c_equal"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

