<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    style="@style/crm_ll_card">
    android:background="@drawable/selector_me_menu_item_bg"
    <LinearLayout style="@style/crm_ll_sale_item">

        <TextView
            android:id="@+id/tv_cu_title"
            android:text="@string/uas_company_name"
            android:textSize="15sp"
            style="@style/TextView_Basic"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:gravity="right"
            android:id="@+id/tv_cu_state"
            android:text="@string/client_Not_traded"
            style="@style/TextView_Basic"
            android:layout_width="wrap_content"/>
    </LinearLayout>
    <LinearLayout style="@style/crm_ll_sale_item"
        android:visibility="gone">

        <TextView
            android:text="@string/client_Number"
            android:minWidth="100dp"
            android:gravity="left"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_cu_code"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            style="@style/TextView_Basic" />
    </LinearLayout>
    <LinearLayout style="@style/crm_ll_sale_item"
        android:visibility="gone">

        <TextView
            android:text="@string/thismonth_prediction"
            android:minWidth="100dp"
            android:gravity="left"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_cu_money"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            style="@style/TextView_Basic" />
    </LinearLayout>

    <LinearLayout style="@style/crm_ll_sale_item">

        <TextView
            android:text="@string/current_stage"
            android:minWidth="100dp"
            android:gravity="left"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_cu_step"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            style="@style/TextView_Basic" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        style="@style/crm_ll_sale_item">

        <TextView
            android:text="@string/common_Contact_information"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_crm_business_phone"
            android:text="XXXXXXX"
            style="@style/TextView_Basic" />
    </LinearLayout>
    <LinearLayout style="@style/crm_ll_sale_item">

        <TextView
            android:text="@string/client_Clerk"
            android:minWidth="100dp"
            android:gravity="left"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_cu_leader"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            style="@style/TextView_Basic" />
    </LinearLayout>

    <LinearLayout style="@style/crm_ll_sale_item">

        <TextView
            android:text="@string/client_status"
            android:minWidth="100dp"
            android:gravity="left"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_cu_auditstatus"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            style="@style/TextView_Basic" />
    </LinearLayout>

    <RelativeLayout
        style="@style/crm_ll_sale_item">

        <TextView
            android:minWidth="100dp"
            android:gravity="left"
            android:id="@+id/tv_crm_business_datetv"
            android:text="@string/last_followup_time"
            android:layout_gravity="center_vertical"
            style="@style/TextView_Basic" />

        <TextView
            android:id="@+id/tv_crm_business_date"
            android:layout_toRightOf="@+id/tv_crm_business_datetv"
            android:text="XXXXXXX"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            style="@style/TextView_Basic" />

        <Button
            android:visibility="gone"
            android:id="@+id/bt_business_qiang"
            android:layout_alignParentRight="true"
            android:text="@string/grab"
            android:layout_width="80dp"
            android:layout_gravity="center_vertical|right"
            style="@style/crm_business_btn_single"
            android:gravity="center" />
    </RelativeLayout>

</LinearLayout>
