<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/commonPopView"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_common_pop_option_item"
        android:orientation="vertical">
        <TextView
            android:id="@+id/send_qzone_text"
            style="@style/commonPopItemTop"
            android:text="@string/qzone_send_word"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/button_invalid"/>
        <TextView
            android:id="@+id/send_qzone_picture"
            style="@style/commonPopItem"
            android:text="@string/qzone_send_picture"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/button_invalid"/>
        <TextView
            android:id="@+id/send_qzone_video"
            style="@style/commonPopSingleItem"
            android:text="@string/qzone_send_video"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/send_qzone_cancel"
        style="@style/commonPopCancelItem"
        android:text="@string/common_cancel"
        />
</LinearLayout>