<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:orientation="vertical" >

    <com.core.widget.ClearEditText
        android:id="@+id/password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/set_list_up"
        android:hint="@string/please_input_password" />

    <com.core.widget.ClearEditText
        android:id="@+id/confirm_password_edit"
        style="@style/IMLineEditPass"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@drawable/set_list_down"
        android:hint="@string/please_confirm_password" />

    <Button
        android:id="@+id/next_step_btn"
        style="@style/IMButton.Orange"
        android:layout_width="match_parent"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/next_step" />

</LinearLayout>